# flakeshot

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  action.yml  flake.nix  rust-toolchain.toml  screenshot.rs
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  upate-flake-lock.yaml  update-flake-lock.yaml
.helix/: languages.toml
nix/: package.nix
src/: cli.rs  config.rs  daemon.rs  lib.rs  main.rs  manager.rs  tray.rs
src/backend/: frame_meta.rs  geometry.rs  mod.rs  output_info.rs  output_mode.rs  portal.rs  x11.rs
src/backend/wayland/: mod.rs  shared_memory.rs  wayland_error.rs  wayland_frame_meta.rs  wayland_geometry.rs  wayland_output_info.rs  wayland_output_mode.rs  wayland_screenshot.rs  wayland_screenshot_manager.rs  wayland_screenshot_state.rs  wayland_shared_memory.rs
src/backend/x11/: dbus.rs  fallback.rs  mod.rs  portal.rs
src/backend/xorg/: mod.rs
src/daemon/: command.rs  message.rs  mod.rs
src/frontend/: file_chooser.rs  main_window.rs  mod.rs  rectangle.rs  screenshot_window.rs  style.css  tool_manager.rs  ui_manager.rs
src/frontend/shape/: mod.rs  point.rs  rectangle.rs
src/frontend/ui/: canvas.rs  mod.rs  tool_manager.rs  toolbar.rs  ui_manager.rs
src/frontend/ui/drawable/: mod.rs
src/frontend/ui/tool/: crop.rs  mod.rs
src/frontend/window/: file_chooser.rs  main_window.rs  mod.rs  mode.rs  notification.rs  run_mode.rs  screenshot_window.rs
src/tray/: command.rs  error.rs  mod.rs
src/tray_daemon/: daemon.rs  mod.rs  tray.rs
src/tray_daemon/frontend/: main_window.rs  mod.rs  screenshot_window.rs  style.css
