[package]
name = "flakeshot"
version = "0.1.0"
edition = "2021"
description = "A screenshot tool for wayland and x11 written in rust."
repository = "https://github.com/eneoli/flakeshot"
authors = ["eneoli", "TornaxO7"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
thiserror = "1.0"
x11rb = { version = "0.12", features = ["randr"] }
tokio = { version = "1.34", features = ["full"] }
arboard = "3.3"
clap = { version = "4.4", features = ["derive", "cargo"] }
anyhow = "1.0"
memfd = "0.6"
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }
smithay-client-toolkit = "0.18.0"
cairo-rs = "0.18.3"
gtk-layer-shell = "0.8.0"
gtk = { version = "0.7.3", package = "gtk4" }
gtk4-layer-shell = "0.2.0"
gio = "0.18.3"
glib = "0.18.3"
