[package]
name = "flakeshot"
version = "0.1.0"
edition = "2021"
description = "A screenshot tool for wayland and x11 written in rust."
repository = "https://github.com/eneoli/flakeshot"
authors = ["eneoli", "TornaxO7"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
thiserror = "1.0"
x11rb = { version = "0.13", features = ["randr"] }
arboard = { version = "3.3", features = ["wayland-data-control"] }
clap = { version = "4.4", features = ["derive", "cargo"] }
anyhow = "1.0"
memfd = "0.6"
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }
gtk4 = "0.7"
ksni = { git = "https://github.com/talonvoice/ksni/", branch = "zbus" }
cairo-rs = "0.18.3"
relm4 = "0.7.0-alpha.2"
relm4-components = "0.7.0-alpha.2"
relm4-icons = { version = "0.7.0-alpha.2", features = [
  "paper",
  "copy",
  "crop",
] }
gtk4-layer-shell = "0.2.0"
gdk4 = "0.7.3"
gdk-pixbuf = "0.18.3"

tracing = "0.1"
tracing-subscriber = "0.3"
