[package]
name = "flakeshot"
version = "0.1.0"
edition = "2021"
description = "A screenshot tool for wayland and x11 written in rust."
repository = "https://github.com/eneoli/flakeshot"
authors = ["eneoli", "TornaxO7"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# x11 specifique
x11rb = { version = "0.13", features = ["randr"] }

# wayland specifique
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }

# logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
tracing-panic = "0.1"

# gtk stuff
gtk4-layer-shell = "0.2.0"
gdk4-x11 = "0.7"
gtk4 = "0.7"
# relm4 = "0.7.0-alpha.2"
relm4 = { git = "https://github.com/Relm4/Relm4" }
relm4-icons = { version = "0.7.0-alpha.2", features = [
  "paper",
  "copy",
  "crop",
] }

# general
image = "0.24"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive", "cargo", "string"] }
anyhow = "1.0"
memfd = "0.6"
xdg = "2.5"
ksni = { git = "https://github.com/talonvoice/ksni/", branch = "zbus" }
rustix = "0.38.31"

tokio = "1.36"
